@@ -22,7 +22,9 @@ module Webrat
     # <tt>field</tt> can be either the value of a name attribute (i.e. <tt>user[email]</tt>)
     # or the text inside a <tt><label></tt> element that points at the <tt><input></tt> field.
     def fills_in(id_or_name_or_label, options = {})
-      find_field(id_or_name_or_label, TextField, TextareaField, PasswordField).set(options[:with])
+      field = find_field(id_or_name_or_label, TextField, TextareaField, PasswordField)
+      field.raise_error_if_disabled
+      field.set(options[:with])
     end
 
     alias_method :fill_in, :fills_in
