@@ -8,6 +8,7 @@
   * Support relative links, including href="?foo=bar" (Patch from Kyle Hargraves)
   * Separated Rails-specific code from the Webrat core to make it easier to use Webrat with other environments
   * Alias visits as visit, clicks_link as click_link, etc. for better readability
+  * Raise error when trying to interact with a disabled form element (Luke Melia)
   
 * Minor enhancements
 
